--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,17 +1,23 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
-    />
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <title>Não é o Notion</title>
+
+
+  <meta http-equiv="Content-Security-Policy"
+  content="default-src 'self'; script-src 'self'; style-src fonts.googleapis.com 'self' 'unsafe-inline'; font-src fonts.gstatic.com" /> <!-- Isso aqui impossibilita que o usuário coloque mais código, com o self falo que ele aceite apenas códigos próprios e não de terceitos -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
